# Version-1.0

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SAFETY.md  SECRET_MANAGEMENT.md  TODO.md  a_happy_body.json  a_invalid_auth_body.json  a_large_body.json  a_missing_fields_body.json  a_timeout_body.json  cli_in.txt  curl_edge_large.json  curl_edge_ok.json  curl_edge_text.txt  openai_models_resp.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
atlas_data/: calendar.json  email_outbox.json  memory.json  notes.json  smart_home.json
scripts/: register_startup.ps1  run_atlas.cmd  run_atlas.ps1
src/projrvt/: __init__.py  api.py  assistant.py  config.py  engine.py  integrations.py  main.py  memory.py  observability.py  proactive.py  security.py  serve.py  voice.py
src/projrvt/providers/: blackbox_api.py
src/projrvt/static/: index.html  manifest.json  sw.js
tests/: conftest.py  test_api.py  test_basic.py  test_blackbox_api.py  test_phase2_5.py  test_proactive.py  test_security.py  test_voice_hardening.py
