[project]
name = "projrvt"
version = "0.1.0"
description = "Minimal projrvt Python project"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
