[project]
name = "projrvt"
version = "1.0.0"
description = "ATLAS personal assistant scaffold with voice, memory, and integrations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0",
  "pyttsx3>=2.90",
  "SpeechRecognition>=3.10.0",
  "requests>=2.31.0",
  "pyperclip>=1.8.2",
  "pytz>=2024.1",
  "schedule>=1.2.0",
  "plyer>=2.1.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
